added a working navbar to the discover page

--- a/Components/Discover.html
+++ b/Components/Discover.html
@@ -4,9 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../dist/output.css">
     <title>CursorBridge-Discover</title>
 </head>
-<body>
-    
+<body class=" dark:bg-slate-900 bg-white">
+    <nav class=" p-4 flex">
+        <div>
+            <p class=" text-black dark:text-white text-lg px-8">CursorBridge</p>
+        </div>
+        <div class=" container flex justify-end px-10 gap-10">
+            <a href=""><p class=" text-black dark:text-white hidden md:block md:text-lg">Button</p></a>
+            <a href=""><p class=" text-black dark:text-white hidden md:block md:text-lg">Search Bar</p></a>
+                <a href=""><p class=" text-black dark:text-white hidden md:block md:text-lg">Icons</p> </a>
+                <a href=""><p class=" text-black dark:text-white hidden md:block md:text-lg">Home</p> </a>
+                <a href=""> <p class=" text-black dark:text-white hidden md:block md:text-lg">Community</p> </a>
+                <a href=""> <p class=" text-black dark:text-white hidden md:block md:text-lg">Donate</p> </a>
+        </div>
+        <div class=" block dark:hidden md:hidden">
+            <img src="Images/MenuBlack.svg">
+        </div>
+
+        <div class=" hidden dark:block md:hidden">
+            <img src="Images/MenuWhite.svg">
+        </div>
+    </nav>
 </body>
 </html>
