--- a/Components/Discover.html
+++ b/Components/Discover.html
@@ -8,28 +8,103 @@
     <title>CursorBridge-Discover</title>
 </head>
 <body class=" dark:bg-slate-900 bg-white">
-    <nav class=" py-4 md:p-4 flex">
+    <nav class=" md:py-4 md:p-4 flex">
         <div>
-            <p class=" text-black dark:text-white text-lg md:px-8">CursorBridge</p>
+            <p class=" px-3 py-4 text-black dark:text-white text-lg md:px-8 md:py-0">CursorBridge</p>
         </div>
-        <div class=" container flex justify-end px-10 gap-10">
+        <div class=" container flex justify-end md:px-10 md:gap-10">
             <a href=""><p class=" text-black dark:text-white hidden md:block md:text-lg">Button</p></a>
             <a href=""><p class=" text-black dark:text-white hidden md:block md:text-lg">Search Bar</p></a>
                 <a href=""><p class=" text-black dark:text-white hidden md:block md:text-lg">Icons</p> </a>
                 <a href=""><p class=" text-black dark:text-white hidden md:block md:text-lg">Home</p> </a>
                 <a href=""> <p class=" text-black dark:text-white hidden md:block md:text-lg">Community</p> </a>
                 <a href=""> <p class=" text-black dark:text-white hidden md:block md:text-lg">Donate</p> </a>
-                <div class=" flex shrink-0 justify-center">
-                    <div class=" block dark:hidden md:hidden">
-                        <img src="Images/MenuBlack.svg" class=" shrink-0 grow-0">
-                    </div>
-            
-                    <div class=" hidden dark:block md:hidden">
-                        <img src="Images/MenuWhite.svg" class=" shrink-0 grow-0">
-                    </div>
-                </div>
+        </div>
+        <div class=" flex shrink-0 px-3 py-4">
+            <div class=" block dark:hidden md:hidden">
+                <img src="Images/MenuBlack.svg" class="">
+            </div>
+    
+            <div class=" hidden dark:block md:hidden">
+                <img src="Images/MenuWhite.svg" class="">
+            </div>
         </div>
     </nav>
+    
+    <div id="Container" class=" flex flex-col md:flex-row md:grid-cols-3 md:grid justify-center">
+        <div class=" md:px-32 py-24 flex justify-center">
+            <div class=" w-64 h-64 bg-gray-300 rounded-xl">
+                <div class=""><img src="./Images/Linuxisbetter.png" class=" py-5 w-auto px-6"></div>
+                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Linux is superior</p></div>
+            </div>
+        </div>
+        <div class=" md:px-32 py-24 flex justify-center">
+            <div class=" w-64 h-64 bg-gray-300 rounded-xl">
+                <div class=""><img src="./Images/Linuxisbetter.png" class=" py-5 w-auto px-6"></div>
+                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Linux is superior</p></div>
+            </div>
+        </div>
+        <div class=" md:px-32 py-24 flex justify-center">
+            <div class=" w-64 h-64 bg-gray-300 rounded-xl">
+                <div class=""><img src="./Images/Linuxisbetter.png" class=" py-5 w-auto px-6"></div>
+                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Linux is superior</p></div>
+            </div>
+        </div>
+        <div class=" md:px-32 py-24 flex justify-center">
+            <div class=" w-64 h-64 bg-gray-300 rounded-xl">
+                <div class=""><img src="./Images/Linuxisbetter.png" class=" py-5 w-auto px-6"></div>
+                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Linux is superior</p></div>
+            </div>
+        </div>
+        <div class=" md:px-32 py-24 flex justify-center">
+            <div class=" w-64 h-64 bg-gray-300 rounded-xl">
+                <div class=""><img src="./Images/Linuxisbetter.png" class=" py-5 w-auto px-6"></div>
+                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Linux is superior</p></div>
+            </div>
+        </div>
+        <div class=" md:px-32 py-24 flex justify-center">
+            <div class=" w-64 h-64 bg-gray-300 rounded-xl">
+                <div class=""><img src="./Images/Linuxisbetter.png" class=" py-5 w-auto px-6"></div>
+                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Linux is superior</p></div>
+            </div>
+        </div>
+        <div class=" md:px-32 py-24 flex justify-center">
+            <div class=" w-64 h-64 bg-gray-300 rounded-xl">
+                <div class=""><img src="./Images/Linuxisbetter.png" class=" py-5 w-auto px-6"></div>
+                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Linux is superior</p></div>
+            </div>
+        </div>
+        <div class=" md:px-32 py-24 flex justify-center">
+            <div class=" w-64 h-64 bg-gray-300 rounded-xl">
+                <div class=""><img src="./Images/Linuxisbetter.png" class=" py-5 w-auto px-6"></div>
+                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Linux is superior</p></div>
+            </div>
+        </div>
+        <div class=" md:px-32 py-24 flex justify-center">
+            <div class=" w-64 h-64 bg-gray-300 rounded-xl">
+                <div class=""><img src="./Images/Linuxisbetter.png" class=" py-5 w-auto px-6"></div>
+                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Linux is superior</p></div>
+            </div>
+        </div>
+        <div class=" md:px-32 py-24 flex justify-center">
+            <div class=" w-64 h-64 bg-gray-300 rounded-xl">
+                <div class=""><img src="./Images/Linuxisbetter.png" class=" py-5 w-auto px-6"></div>
+                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Linux is superior</p></div>
+            </div>
+        </div>
+        <div class=" md:px-32 py-24 flex justify-center">
+            <div class=" w-64 h-64 bg-gray-300 rounded-xl">
+                <div class=""><img src="./Images/Linuxisbetter.png" class=" py-5 w-auto px-6"></div>
+                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Linux is superior</p></div>
+            </div>
+        </div>
+        <div class=" md:px-32 py-24 flex justify-center">
+            <div class=" w-64 h-64 bg-gray-300 rounded-xl">
+                <div class=""><img src="./Images/Linuxisbetter.png" class=" py-5 w-auto px-6"></div>
+                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Linux is superior</p></div>
+            </div>
+        </div>
+    </div>
 
 </body>
 </html>
