Masic discover page done!

--- a/Components/Discover.html
+++ b/Components/Discover.html
@@ -13,7 +13,7 @@
             <p class=" px-3 py-4 text-black dark:text-white text-lg md:px-8 md:py-0">CursorBridge</p>
         </div>
         <div class=" container flex justify-end md:px-10 md:gap-10">
-            <a href=""><p class=" text-black dark:text-white hidden md:block md:text-lg">Button</p></a>
+            <a href="./Buttons/DIscoverButton.html"><p class=" text-black dark:text-white hidden md:block md:text-lg">Button</p></a>
             <a href=""><p class=" text-black dark:text-white hidden md:block md:text-lg">Search Bar</p></a>
                 <a href=""><p class=" text-black dark:text-white hidden md:block md:text-lg">Icons</p> </a>
                 <a href=""><p class=" text-black dark:text-white hidden md:block md:text-lg">Home</p> </a>
@@ -31,7 +31,7 @@
         </div>
     </nav>
     
-    <div id="Container" class=" flex flex-col md:flex-row md:grid-cols-3 md:grid justify-center">
+    <div id="Container" class=" flex flex-col md:grid-cols-3 md:grid justify-center">
         <div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
                 <div class=""><img src="./Images/Linuxisbetter.png" class=" py-5 w-auto px-6"></div>
@@ -40,68 +40,68 @@
         </div>
         <div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
-                <div class=""><img src="./Images/Linuxisbetter.png" class=" py-5 w-auto px-6"></div>
-                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Linux is superior</p></div>
+                <div class=""><img src="./Images/GamingBtn.png" class=" py-5 w-auto px-6"></div>
+                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Neon Cloud</p></div>
             </div>
         </div>
         <div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
-                <div class=""><img src="./Images/Linuxisbetter.png" class=" py-5 w-auto px-6"></div>
-                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Linux is superior</p></div>
+                <div class=""><img src="./Images/BreadButton.png" class=" py-5 w-auto px-6"></div>
+                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Bread</p></div>
             </div>
         </div>
         <div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
-                <div class=""><img src="./Images/Linuxisbetter.png" class=" py-5 w-auto px-6"></div>
-                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Linux is superior</p></div>
+                <div class=""><img src="./Images/Group 1.png" class=" py-5 w-auto px-6"></div>
+                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Lava Flow</p></div>
             </div>
         </div>
         <div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
-                <div class=""><img src="./Images/Linuxisbetter.png" class=" py-5 w-auto px-6"></div>
-                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Linux is superior</p></div>
+                <div class=""><img src="./Images/Group2.png" class=" py-5 w-auto px-6"></div>
+                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Moon Boy</p></div>
             </div>
         </div>
         <div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
-                <div class=""><img src="./Images/Linuxisbetter.png" class=" py-5 w-auto px-6"></div>
-                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Linux is superior</p></div>
+                <div class=""><img src="./Images/Group6.png" class=" py-5 w-auto px-6"></div>
+                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Purple</p></div>
             </div>
         </div>
         <div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
-                <div class=""><img src="./Images/Linuxisbetter.png" class=" py-5 w-auto px-6"></div>
-                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Linux is superior</p></div>
+                <div class=""><img src="./Images/PinkFrenzy.png" class=" py-5 w-auto px-6"></div>
+                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Pink Frenzy</p></div>
             </div>
         </div>
         <div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
-                <div class=""><img src="./Images/Linuxisbetter.png" class=" py-5 w-auto px-6"></div>
-                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Linux is superior</p></div>
+                <div class=""><img src="./Images/PlainRed.png" class=" py-5 w-auto px-6"></div>
+                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Plain Red</p></div>
             </div>
         </div>
         <div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
-                <div class=""><img src="./Images/Linuxisbetter.png" class=" py-5 w-auto px-6"></div>
-                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Linux is superior</p></div>
+                <div class=""><img src="./Images/SeaBed.png" class=" py-5 w-auto px-6"></div>
+                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Sea Bed</p></div>
             </div>
         </div>
         <div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
-                <div class=""><img src="./Images/Linuxisbetter.png" class=" py-5 w-auto px-6"></div>
-                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Linux is superior</p></div>
+                <div class=""><img src="./Images/Lavaman.png" class=" py-5 w-auto px-6"></div>
+                <div class=""><p class=" text-center text-lg text-gray-700 py-7">LavaBar</p></div>
             </div>
         </div>
         <div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
-                <div class=""><img src="./Images/Linuxisbetter.png" class=" py-5 w-auto px-6"></div>
-                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Linux is superior</p></div>
+                <div class=""><img src="./Images/Searchbar.png" class=" py-5 w-auto px-6"></div>
+                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Classic White</p></div>
             </div>
         </div>
         <div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
-                <div class=""><img src="./Images/Linuxisbetter.png" class=" py-5 w-auto px-6"></div>
-                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Linux is superior</p></div>
+                <div class=""><img src="./Images/BandW.png" class=" py-5 w-auto px-6"></div>
+                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Black and White</p></div>
             </div>
         </div>
     </div>
