--- a/Components/Discover.html
+++ b/Components/Discover.html
@@ -16,7 +16,7 @@
             <a href="./Buttons/DIscoverButton.html"><p class=" text-black dark:text-white hidden md:block md:text-lg">Button</p></a>
             <a href=""><p class=" text-black dark:text-white hidden md:block md:text-lg">Search Bar</p></a>
                 <a href=""><p class=" text-black dark:text-white hidden md:block md:text-lg">Icons</p> </a>
-                <a href=""><p class=" text-black dark:text-white hidden md:block md:text-lg">Home</p> </a>
+                <a href=""><p class=" text-black dark:text-white hidden md:block md:text-lg">Docs</p> </a>
                 <a href=""> <p class=" text-black dark:text-white hidden md:block md:text-lg">Community</p> </a>
                 <a href=""> <p class=" text-black dark:text-white hidden md:block md:text-lg">Donate</p> </a>
         </div>
