--- a/Components/Buttons/DIscoverButton.html
+++ b/Components/Buttons/DIscoverButton.html
@@ -64,12 +64,12 @@
                 <div class=""><p class=" text-center text-lg text-gray-700 py-7">Purple</p></div>
             </div>
         </div>
-        <div class=" md:px-32 py-24 flex justify-center">
+        <a href="./Linuxisbetter.html"><div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
                 <div class=""><img src="./Images/Linuxisbetter.png" class=" py-5 w-auto px-6"></div>
                 <div class=""><p class=" text-center text-lg text-gray-700 py-7">Linux is superior</p></div>
             </div>
-        </div>
+        </div></a>
     </div>
 
 </body>
