--- a/Components/Buttons/Linuxisbetter.html
+++ b/Components/Buttons/Linuxisbetter.html
@@ -5,11 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CursorBridge</title>
     <link rel="stylesheet" href="../../dist/output.css">
-    <script src="./controller.js"></script>
     <link rel="stylesheet" href="./controller.css">
 </head>
 <body class="bg-white dark:bg-slate-900">
-    <div id="BodyPC" class=" hidden md:block">
+    <div id="BodyPC" class="">
         <div id="Back" class=" w-24 h-12 bg-red-600 rounded-xl m-8"><a href="./DIscoverButton.html"><p class=" text-white text-lg flex justify-center py-2">Back</p></a></div>
         <div id="Buttons" class=" flex md:justify-end gap-4 flex-row  justify-center md:px-40">
             <button id="HTML" class=" w-24 h-14 rounded-lg bg-white">HTML</button>
@@ -18,16 +17,17 @@
             <button id="IMG" class=" w-24 h-14 rounded-lg bg-white">IMG</button>
         </div>
         <div id="Image" class=" flex justify-center md:justify-start mx-14"><img class=" md:translate-y-20" src="./Images/Linuxisbetter.png"></div>
-        <div class=" flex justify-end px-28">
+        <div class=" flex justify-start md:justify-end px-28">
             <iframe id="HTMLcontent" class="" src="https://www.thiscodeworks.com/embed/61ff2cfebcdcda0015005970" style="width: 50%; height: 138px;" frameborder="0"></iframe>
             <iframe id="CSScontent" class=""src="https://www.thiscodeworks.com/embed/61ff2d47bcdcda0015005971" style="width: 50%; height: 515px;" frameborder="0"></iframe>
             <iframe id="SVGcontent" class="" src="https://www.thiscodeworks.com/embed/61ff2d80bcdcda0015005973" style="width: 50%; height: 281px;" frameborder="0"></iframe>
             <div id="IMGcontent" class=" text-white">
-                <a>Download the image here.</a>
+                <a >Download the image here.</a>
                 <p>Note: that if you are suing SVG then you do not need to download the image.  </p>
             </div>
         </div>
     </div>
-
+    
+    <script src="./controller.js"></script>
 </body>
 </html>
