finished the button page (FINALLY)

--- a/Components/Discover.html
+++ b/Components/Discover.html
@@ -32,12 +32,12 @@
     </nav>
     
     <div id="Container" class=" flex flex-col md:grid-cols-3 md:grid justify-center">
-        <div class=" md:px-32 py-24 flex justify-center">
+        <a href="./Buttons/Linuxisbetter.html"><div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
                 <div class=""><img src="./Images/Linuxisbetter.png" class=" py-5 w-auto px-6"></div>
                 <div class=""><p class=" text-center text-lg text-gray-700 py-7">Linux is superior</p></div>
             </div>
-        </div>
+        </div></a>
         <div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
                 <div class=""><img src="./Images/GamingBtn.png" class=" py-5 w-auto px-6"></div>
