--- a/Components/Discover.html
+++ b/Components/Discover.html
@@ -44,24 +44,24 @@
                 <div class=""><p class=" text-center text-lg text-gray-700 py-7">Neon Cloud</p></div>
             </div>
         </div>
-        <div class=" md:px-32 py-24 flex justify-center">
+        <a href="./Buttons/Bread.html"><div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
                 <div class=""><img src="./Images/BreadButton.png" class=" py-5 w-auto px-6"></div>
                 <div class=""><p class=" text-center text-lg text-gray-700 py-7">Bread</p></div>
             </div>
-        </div>
+        </div></a>
         <div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
                 <div class=""><img src="./Images/Group 1.png" class=" py-5 w-auto px-6"></div>
                 <div class=""><p class=" text-center text-lg text-gray-700 py-7">Lava Flow</p></div>
             </div>
         </div>
-        <div class=" md:px-32 py-24 flex justify-center">
+       <a href="./Buttons/MoonBoy.html"> <div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
                 <div class=""><img src="./Images/Group2.png" class=" py-5 w-auto px-6"></div>
                 <div class=""><p class=" text-center text-lg text-gray-700 py-7">Moon Boy</p></div>
             </div>
-        </div>
+        </div></a>
         <div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
                 <div class=""><img src="./Images/Group6.png" class=" py-5 w-auto px-6"></div>
