--- a/Components/Buttons/DIscoverButton.html
+++ b/Components/Buttons/DIscoverButton.html
@@ -33,12 +33,12 @@
     
     <div id="Container" class=" flex flex-col md:grid-cols-3 md:grid justify-center">
 
-        <div class=" md:px-32 py-24 flex justify-center">
+       <a href="./MoonBoy.html"> <div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
                 <div class=""><img src="./Images/Group2.png" class=" py-5 w-auto px-6"></div>
                 <div class=""><p class=" text-center text-lg text-gray-700 py-7">Moon Boy</p></div>
             </div>
-        </div>
+        </div></a>
         <div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
                 <div class=""><img src="./Images/GamingBtn.png" class=" py-5 w-auto px-6"></div>
@@ -51,13 +51,12 @@
                 <div class=""><p class=" text-center text-lg text-gray-700 py-7">Lava Flow</p></div>
             </div>
         </div>
-
-        <div class=" md:px-32 py-24 flex justify-center">
+        <a href="./Bread.html"><div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
                 <div class=""><img src="./Images/BreadButton.png" class=" py-5 w-auto px-6"></div>
                 <div class=""><p class=" text-center text-lg text-gray-700 py-7">Bread</p></div>
             </div>
-        </div>
+        </div></a>
         <div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
                 <div class=""><img src="./Images/Group6.png" class=" py-5 w-auto px-6"></div>
