--- a/Components/Buttons/DIscoverButton.html
+++ b/Components/Buttons/DIscoverButton.html
@@ -39,12 +39,12 @@
                 <div class=""><p class=" text-center text-lg text-gray-700 py-7">Moon Boy</p></div>
             </div>
         </div></a>
-        <div class=" md:px-32 py-24 flex justify-center">
+        <a href="./GamingBtn.html"><div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
                 <div class=""><img src="./Images/GamingBtn.png" class=" py-5 w-auto px-6"></div>
                 <div class=""><p class=" text-center text-lg text-gray-700 py-7">Neon Cloud</p></div>
             </div>
-        </div>
+        </div></a>
         <div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
                 <div class=""><img src="./Images/Group 1.png" class=" py-5 w-auto px-6"></div>
