--- a/Components/Discover.html
+++ b/Components/Discover.html
@@ -38,12 +38,12 @@
                 <div class=""><p class=" text-center text-lg text-gray-700 py-7">Linux is superior</p></div>
             </div>
         </div></a>
-        <div class=" md:px-32 py-24 flex justify-center">
+        <a href="./Buttons/GamingBtn.html"><div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
                 <div class=""><img src="./Images/GamingBtn.png" class=" py-5 w-auto px-6"></div>
                 <div class=""><p class=" text-center text-lg text-gray-700 py-7">Neon Cloud</p></div>
             </div>
-        </div>
+        </div></a>
         <a href="./Buttons/Bread.html"><div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
                 <div class=""><img src="./Images/BreadButton.png" class=" py-5 w-auto px-6"></div>
