--- a/Components/Buttons/GamingBtn.html
+++ b/Components/Buttons/GamingBtn.html
@@ -22,7 +22,7 @@
             <iframe id="CSScontent" class=""src="https://www.thiscodeworks.com/embed/6205d430a4f5770015a884ef" style="width: 50%; height: 515px;" frameborder="0"></iframe>
             <iframe id="SVGcontent" class="" src="https://www.thiscodeworks.com/embed/6205d294a4f5770015a884ed" style="width: 50%; height: 281px;" frameborder="0"></iframe>
             <div id="IMGcontent" class=" text-white">
-                <a href="./Images/Group 21.png"> Download the image here.</a>
+                <a href="./Images/Group 21.png" download="Neon CLoud"> Download the image here.</a>
                 <p>Note: that if you are using SVG then you do not need to download the image.  </p>
             </div>
 
