--- a/Components/Buttons/DIscoverButton.html
+++ b/Components/Buttons/DIscoverButton.html
@@ -45,24 +45,24 @@
                 <div class=""><p class=" text-center text-lg text-gray-700 py-7">Neon Cloud</p></div>
             </div>
         </div></a>
-        <div class=" md:px-32 py-24 flex justify-center">
+        <a href="./LavaBtn.html"><div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
                 <div class=""><img src="./Images/Group 1.png" class=" py-5 w-auto px-6"></div>
                 <div class=""><p class=" text-center text-lg text-gray-700 py-7">Lava Flow</p></div>
             </div>
-        </div>
+        </div></a>
         <a href="./Bread.html"><div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
                 <div class=""><img src="./Images/BreadButton.png" class=" py-5 w-auto px-6"></div>
                 <div class=""><p class=" text-center text-lg text-gray-700 py-7">Bread</p></div>
             </div>
         </div></a>
-        <div class=" md:px-32 py-24 flex justify-center">
+        <a href="./PurpleBtn.html"><div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
                 <div class=""><img src="./Images/Group6.png" class=" py-5 w-auto px-6"></div>
                 <div class=""><p class=" text-center text-lg text-gray-700 py-7">Purple</p></div>
             </div>
-        </div>
+        </div></a>
         <a href="./Linuxisbetter.html"><div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
                 <div class=""><img src="./Images/Linuxisbetter.png" class=" py-5 w-auto px-6"></div>
