--- a/Components/Buttons/LavaBtn.html
+++ b/Components/Buttons/LavaBtn.html
@@ -16,14 +16,14 @@
             <button id="SVG" class=" w-24 h-14 rounded-lg bg-white">SVG</button>
             <button id="IMG" class=" w-24 h-14 rounded-lg bg-white">IMG</button>
         </div>
-        <div id="Image" class=" flex justify-center md:justify-start mx-14"><img class=" md:translate-y-20" src="./Images/Linuxisbetter.png"></div>
+        <div id="Image" class=" flex justify-center md:justify-start mx-14"><img class=" md:translate-y-20" src="./Images/Group 1.png"></div>
         <div class=" flex justify-start md:justify-end px-28">
-            <iframe id="HTMLcontent" class="" src="https://www.thiscodeworks.com/embed/61ff2cfebcdcda0015005970" style="width: 50%; height: 138px;" frameborder="0"></iframe>
-            <iframe id="CSScontent" class=""src="https://www.thiscodeworks.com/embed/61ff2d47bcdcda0015005971" style="width: 50%; height: 515px;" frameborder="0"></iframe>
-            <iframe id="SVGcontent" class="" src="https://www.thiscodeworks.com/embed/61ff2d80bcdcda0015005973" style="width: 50%; height: 281px;" frameborder="0"></iframe>
+            <iframe id="HTMLcontent" class="" src="https://www.thiscodeworks.com/embed/61e7396004f1520015d8d8a0" style="width: 50%; height: 138px;" frameborder="0"></iframe>
+            <iframe id="CSScontent" class=""src="https://www.thiscodeworks.com/embed/62086b99d9ba1100151e6c28" style="width: 50%; height: 515px;" frameborder="0"></iframe>
+            <iframe id="SVGcontent" class="" src="https://www.thiscodeworks.com/embed/62086c39d9ba1100151e6c2b" style="width: 50%; height: 281px;" frameborder="0"></iframe>
             <div id="IMGcontent" class=" text-white">
-                <a href="./Images/Linux.png" download="Linux">Download the image here.</a>
-                <p>Note: that if you are suing SVG then you do not need to download the image.  </p>
+                <a href="./Images/TEETH.png" download="Lava Teeth"> Download the image here.</a>
+                <p>Note: that if you are using SVG then you do not need to download the image.  </p>
             </div>
 
         </div>
