--- a/Components/Discover.html
+++ b/Components/Discover.html
@@ -14,7 +14,7 @@
         </div>
         <div class=" container flex justify-end md:px-10 md:gap-10">
             <a href="./Buttons/DIscoverButton.html"><p class=" text-black dark:text-white hidden md:block md:text-lg">Button</p></a>
-            <a href=""><p class=" text-black dark:text-white hidden md:block md:text-lg">Search Bar</p></a>
+            <a href="./Search_Bar/DiscoverSearchBars.html"><p class=" text-black dark:text-white hidden md:block md:text-lg">Search Bar</p></a>
                 <a href=""><p class=" text-black dark:text-white hidden md:block md:text-lg">Icons</p> </a>
                 <a href=""><p class=" text-black dark:text-white hidden md:block md:text-lg">Docs</p> </a>
                 <a href=""> <p class=" text-black dark:text-white hidden md:block md:text-lg">Community</p> </a>
@@ -92,12 +92,12 @@
                 <div class=""><p class=" text-center text-lg text-gray-700 py-7">LavaBar</p></div>
             </div>
         </div>
-        <div class=" md:px-32 py-24 flex justify-center">
+        <a href="./Search_Bar/Plain_Search.html"><div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
                 <div class=""><img src="./Images/Searchbar.png" class=" py-5 w-auto px-6"></div>
                 <div class=""><p class=" text-center text-lg text-gray-700 py-7">Classic White</p></div>
             </div>
-        </div>
+        </div></a>
         <div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
                 <div class=""><img src="./Images/BandW.png" class=" py-5 w-auto px-6"></div>
