Added new search Bars

--- a/Components/Buttons/Linuxisbetter.html
+++ b/Components/Buttons/Linuxisbetter.html
@@ -23,7 +23,7 @@
             <iframe id="SVGcontent" class="" src="https://www.thiscodeworks.com/embed/61ff2d80bcdcda0015005973" style="width: 50%; height: 281px;" frameborder="0"></iframe>
             <div id="IMGcontent" class=" text-white">
                 <a href="./Images/Linux.png" download="Linux">Download the image here.</a>
-                <p>Note: that if you are suing SVG then you do not need to download the image.  </p>
+                <p>Note: that if you are using SVG then you do not need to download the image.  </p>
             </div>
 
         </div>
