--- a/Components/Search_Bar/DiscoverSearchBars.html
+++ b/Components/Search_Bar/DiscoverSearchBars.html
@@ -39,16 +39,16 @@
                 <div class=""><p class=" text-center text-lg text-gray-700 py-7">Plain White</p></div>
             </div>
         </div></a>
-        <a href="./GamingBtn.html"><div class=" md:px-32 py-24 flex justify-center">
+        <a href="./PinkSearch.html"><div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
-                <div class=""><img src="./Images/GamingBtn.png" class=" py-5 w-auto px-6"></div>
-                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Neon Cloud</p></div>
+                <div class=""><img src="./Images/PlainRed.png" class=" py-5 w-auto px-6"></div>
+                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Plain Red</p></div>
             </div>
         </div></a>
-        <a href="./LavaBtn.html"><div class=" md:px-32 py-24 flex justify-center">
+        <a href="./BandW.html"><div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
-                <div class=""><img src="./Images/Group 1.png" class=" py-5 w-auto px-6"></div>
-                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Lava Flow</p></div>
+                <div class=""><img src="./Images/BandW.png" class=" py-5 w-auto px-6"></div>
+                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Black And White</p></div>
             </div>
         </div></a>
         <a href="./Bread.html"><div class=" md:px-32 py-24 flex justify-center">
