--- a/Components/Discover.html
+++ b/Components/Discover.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../dist/output.css">
+    <link rel="icon" type="image/png" href="./Images/Logo.png">
     <title>CursorBridge-Discover</title>
 </head>
 <body class=" dark:bg-slate-900 bg-white">
@@ -74,12 +75,12 @@
                 <div class=""><p class=" text-center text-lg text-gray-700 py-7">Pink Frenzy</p></div>
             </div>
         </div>
-        <div class=" md:px-32 py-24 flex justify-center">
+        <a href="./Search_Bar/PinkSearch.html"><div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
                 <div class=""><img src="./Images/PlainRed.png" class=" py-5 w-auto px-6"></div>
                 <div class=""><p class=" text-center text-lg text-gray-700 py-7">Plain Red</p></div>
             </div>
-        </div>
+        </div></a>
         <div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
                 <div class=""><img src="./Images/SeaBed.png" class=" py-5 w-auto px-6"></div>
@@ -98,12 +99,12 @@
                 <div class=""><p class=" text-center text-lg text-gray-700 py-7">Classic White</p></div>
             </div>
         </div></a>
-        <div class=" md:px-32 py-24 flex justify-center">
+        <a href="./Search_Bar/BandW.html"><div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
                 <div class=""><img src="./Images/BandW.png" class=" py-5 w-auto px-6"></div>
                 <div class=""><p class=" text-center text-lg text-gray-700 py-7">Black and White</p></div>
             </div>
-        </div>
+        </div></a>
     </div>
 
 </body>
