--- a/Components/Search_Bar/PinkSearch.html
+++ b/Components/Search_Bar/PinkSearch.html
@@ -9,20 +9,20 @@
 </head>
 <body class="bg-white dark:bg-slate-900">
     <div id="BodyPC" class="">
-        <div id="Back" class=" w-24 h-12 bg-red-600 rounded-xl m-8"><a href="./DIscoverButton.html"><p class=" text-white text-lg flex justify-center py-2">Back</p></a></div>
+        <div id="Back" class=" w-24 h-12 bg-red-600 rounded-xl m-8"><a href="./DiscoverSearchBars.html"><p class=" text-white text-lg flex justify-center py-2">Back</p></a></div>
         <div id="Buttons" class=" flex md:justify-end gap-4 flex-row  justify-center md:px-40">
             <button id="HTML" class=" w-24 h-14 rounded-lg bg-white">HTML</button>
             <button id="CSS" class=" w-24 h-14 rounded-lg bg-white">CSS</button>
             <button id="SVG" class=" w-24 h-14 rounded-lg bg-white">SVG</button>
             <button id="IMG" class=" w-24 h-14 rounded-lg bg-white">IMG</button>
         </div>
-        <div id="Image" class=" flex justify-center md:justify-start mx-14"><img class=" md:translate-y-20" src="./Images/Group2.png"></div>
+        <div id="Image" class=" flex justify-center md:justify-start mx-14"><img class=" md:translate-y-20" src="Images/PlainRed.png"></div>
         <div class=" flex justify-start md:justify-end px-28">
-            <iframe id="HTMLcontent" class="" src="https://www.thiscodeworks.com/embed/61ad23f2e9ef2000152ae326" style="width: 50%; height: 138px;" frameborder="0"></iframe>
-            <iframe id="CSScontent" class=""src="https://www.thiscodeworks.com/embed/61ad3308e9ef2000152ae32b" style="width: 50%; height: 515px;" frameborder="0"></iframe>
-            <iframe id="SVGcontent" class="" src="https://www.thiscodeworks.com/embed/61ea0a0de2df700015c37fa4" style="width: 50%; height: 281px;" frameborder="0"></iframe>
+            <iframe id="HTMLcontent" class="" src="https://www.thiscodeworks.com/embed/61e7396004f1520015d8d8a0" style="width: 50%; height: 138px;" frameborder="0"></iframe>
+            <iframe id="CSScontent" class=""src="https://www.thiscodeworks.com/embed/6209b2f0c055f30015380b3f" style="width: 50%; height: 515px;" frameborder="0"></iframe>
+            <iframe id="SVGcontent" class="" src="https://www.thiscodeworks.com/embed/61eb62dd70147b00155329b5" style="width: 50%; height: 281px;" frameborder="0"></iframe>
             <div id="IMGcontent" class=" text-white">
-                <a >No Image Available. Only SVG supported.</a>
+                <a> No Images here.</a>
                 <p>Note: that if you are using SVG then you do not need to download the image.  </p>
             </div>
 
