finished all the VISIBLE components

--- a/Components/Discover.html
+++ b/Components/Discover.html
@@ -69,24 +69,24 @@
                 <div class=""><p class=" text-center text-lg text-gray-700 py-7">Purple</p></div>
             </div>
         </div></a>
-        <div class=" md:px-32 py-24 flex justify-center">
+        <a href="./Search_Bar/Pink_Frenzy.html"><div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
                 <div class=""><img src="./Images/PinkFrenzy.png" class=" py-5 w-auto px-6"></div>
                 <div class=""><p class=" text-center text-lg text-gray-700 py-7">Pink Frenzy</p></div>
             </div>
-        </div>
+        </div></a>
         <a href="./Search_Bar/PinkSearch.html"><div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
                 <div class=""><img src="./Images/PlainRed.png" class=" py-5 w-auto px-6"></div>
                 <div class=""><p class=" text-center text-lg text-gray-700 py-7">Plain Red</p></div>
             </div>
         </div></a>
-        <div class=" md:px-32 py-24 flex justify-center">
+        <a href="./Search_Bar/Sea_Bed.html"><div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
                 <div class=""><img src="./Images/SeaBed.png" class=" py-5 w-auto px-6"></div>
                 <div class=""><p class=" text-center text-lg text-gray-700 py-7">Sea Bed</p></div>
             </div>
-        </div>
+        </div></a>
         <div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
                 <div class=""><img src="./Images/Lavaman.png" class=" py-5 w-auto px-6"></div>
