--- a/Components/Search_Bar/DiscoverSearchBars.html
+++ b/Components/Search_Bar/DiscoverSearchBars.html
@@ -51,22 +51,22 @@
                 <div class=""><p class=" text-center text-lg text-gray-700 py-7">Black And White</p></div>
             </div>
         </div></a>
-        <a href="./Bread.html"><div class=" md:px-32 py-24 flex justify-center">
+        <a href="./Sea_Bed.html"><div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
-                <div class=""><img src="./Images/BreadButton.png" class=" py-5 w-auto px-6"></div>
-                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Bread</p></div>
+                <div class=""><img src="./Images/SeaBed.png" class=" py-5 w-auto px-6"></div>
+                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Sea Weed</p></div>
             </div>
         </div></a>
-        <a href="./PurpleBtn.html"><div class=" md:px-32 py-24 flex justify-center">
+        <a href="./Pink_Frenzy.html"><div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
-                <div class=""><img src="./Images/Group6.png" class=" py-5 w-auto px-6"></div>
-                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Purple</p></div>
+                <div class=""><img src="./Images/PinkFrenzy.png" class=" py-5 w-auto px-6"></div>
+                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Pink Frenzy</p></div>
             </div>
         </div></a>
-        <a href="./Linuxisbetter.html"><div class=" md:px-32 py-24 flex justify-center">
+        <a href="./LavaSearch.html"><div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
-                <div class=""><img src="./Images/Linuxisbetter.png" class=" py-5 w-auto px-6"></div>
-                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Linux is superior</p></div>
+                <div class=""><img src="./Images/Lavaman.png" class=" py-5 w-auto px-6"></div>
+                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Lava Search</p></div>
             </div>
         </div></a>
     </div>
