--- a/Components/Search_Bar/LavaSearch.html
+++ b/Components/Search_Bar/LavaSearch.html
@@ -22,7 +22,7 @@
             <iframe id="CSScontent" class=""src="https://www.thiscodeworks.com/embed/620c6e6e80e1cd0015bd947d" style="width: 50%; height: 515px;" frameborder="0"></iframe>
             <iframe id="SVGcontent" class="" src="https://www.thiscodeworks.com/embed/620c6e9e80e1cd0015bd947e" style="width: 50%; height: 281px;" frameborder="0"></iframe>
             <div id="IMGcontent" class=" text-white">
-                <a href="./Images/Lava.png" download="InfiniteSquares"> Download the image here.</a>
+                <a href="./Images/Lava.png" download="Lava"> Download the image here.</a>
                 <p>Note: that if you are using SVG then you do not need to download the image.  </p>
             </div>
 
