--- a/Components/Buttons/DIscoverButton.html
+++ b/Components/Buttons/DIscoverButton.html
@@ -14,7 +14,7 @@
         </div>
         <div class=" container flex justify-end md:px-10 md:gap-10">
             <a href=""><p class=" text-black dark:text-white hidden md:block md:text-lg">Button</p></a>
-            <a href=""><p class=" text-black dark:text-white hidden md:block md:text-lg">Search Bar</p></a>
+            <a href="../Search_Bar/DiscoverSearchBars.html"><p class=" text-black dark:text-white hidden md:block md:text-lg">Search Bar</p></a>
                 <a href=""><p class=" text-black dark:text-white hidden md:block md:text-lg">Icons</p> </a>
                 <a href=""><p class=" text-black dark:text-white hidden md:block md:text-lg">Docs</p> </a>
                 <a href=""> <p class=" text-black dark:text-white hidden md:block md:text-lg">Community</p> </a>
