--- a/Components/Search_Bar/DiscoverSearchBars.html
+++ b/Components/Search_Bar/DiscoverSearchBars.html
@@ -13,7 +13,7 @@
             <a href="../Discover.html"><p class=" px-3 py-4 text-black dark:text-white text-lg md:px-8 md:py-0">CursorBridge</p></a>
         </div>
         <div class=" container flex justify-end md:px-10 md:gap-10">
-            <a href=""><p class=" text-black dark:text-white hidden md:block md:text-lg">Button</p></a>
+            <a href="../Buttons/DIscoverButton.html"><p class=" text-black dark:text-white hidden md:block md:text-lg">Button</p></a>
             <a href=""><p class=" text-black dark:text-white hidden md:block md:text-lg">Search Bar</p></a>
                 <a href=""><p class=" text-black dark:text-white hidden md:block md:text-lg">Icons</p> </a>
                 <a href=""><p class=" text-black dark:text-white hidden md:block md:text-lg">Docs</p> </a>
