--- a/Components/Discover.html
+++ b/Components/Discover.html
@@ -87,12 +87,12 @@
                 <div class=""><p class=" text-center text-lg text-gray-700 py-7">Sea Bed</p></div>
             </div>
         </div></a>
-        <div class=" md:px-32 py-24 flex justify-center">
+        <a href="./Search_Bar/LavaSearch.html"><div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
                 <div class=""><img src="./Images/Lavaman.png" class=" py-5 w-auto px-6"></div>
                 <div class=""><p class=" text-center text-lg text-gray-700 py-7">LavaBar</p></div>
             </div>
-        </div>
+        </div></a>
         <a href="./Search_Bar/Plain_Search.html"><div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
                 <div class=""><img src="./Images/Searchbar.png" class=" py-5 w-auto px-6"></div>
