--- a/Components/Discover.html
+++ b/Components/Discover.html
@@ -21,6 +21,14 @@
                 <a href=""> <p class=" text-black dark:text-white hidden md:block md:text-lg">Community</p> </a>
                 <a href=""> <p class=" text-black dark:text-white hidden md:block md:text-lg">Donate</p> </a>
         </div>
+        <div class=" rounded-lg bg-blue-700 w-56 h-9 m-4 md:hidden grid grid-cols-1 flex justify-center">
+            <p class=" py-1 text-white opacity-100">Discover</p>
+            <div class=" opacity-0 hover:opacity-100">
+                <a href="./Buttons/DIscoverButton.html"><div class=" w-20 h-9 bg-slate-200">
+                 <p>Buttons</p>
+                </div>  </a>
+            </div>
+        </div>
     </nav>
     
     <div id="Container" class=" flex flex-col md:grid-cols-3 md:grid justify-center">
