--- a/Components/Discover.html
+++ b/Components/Discover.html
@@ -21,14 +21,32 @@
                 <a href=""> <p class=" text-black dark:text-white hidden md:block md:text-lg">Community</p> </a>
                 <a href=""> <p class=" text-black dark:text-white hidden md:block md:text-lg">Donate</p> </a>
         </div>
-        <div class=" rounded-lg bg-blue-700 w-56 h-9 m-4 md:hidden grid grid-cols-1 flex justify-center">
-            <p class=" py-1 text-white opacity-100">Discover</p>
-            <div class=" opacity-0 hover:opacity-100">
-                <a href="./Buttons/DIscoverButton.html"><div class=" w-20 h-9 bg-slate-200">
-                 <p>Buttons</p>
-                </div>  </a>
+        <div class=" z-50">
+            <div class=" rounded-lg bg-blue-700 w-24 h-9 m-4 md:hidden grid grid-cols-1">
+                <p class=" py-1 text-white opacity-100 px-4">Discover</p>
+                <div class=" opacity-0 hover:opacity-100 px-2 py-1 bg-slate-200">
+                    <a href="./Buttons/DIscoverButton.html"><div class=" w-20 h-9 hover:bg-slate-400">
+                     <p class=" px-2">Buttons</p>
+                    </div></a>
+                    <a href="./Search_Bar/DiscoverSearchBars.html"><div class=" w-20 h-9 hover:bg-slate-400">
+                        <p class=" px-1">Searchbar</p>
+                       </div></a>
+                       <a href=""><div class=" w-20 h-9 hover:bg-slate-400">
+                        <p class=" px-1">Icons</p>
+                       </div></a>
+                       <a href=""><div class=" w-20 h-9 hover:bg-slate-400">
+                        <p class=" px-1">Community</p>
+                        </p>
+                       </div></a>
+                       <a href=""><div class=" w-20 h-9 hover:bg-slate-400">
+                        <p class=" px-1">Docs</p>
+                       </div></a>
+                       <a href=""><div class=" w-20 h-9 hover:bg-slate-400">
+                        <p class=" px-1">Donate</p>
+                       </div></a>
+                </div>
             </div>
-        </div>
+            </div>
     </nav>
     
     <div id="Container" class=" flex flex-col md:grid-cols-3 md:grid justify-center">
