--- a/Components/Search_Bar/DiscoverSearchBars.html
+++ b/Components/Search_Bar/DiscoverSearchBars.html
@@ -22,12 +22,12 @@
         </div>
         <div class=" z-50">
             <div class=" rounded-lg bg-blue-700 w-24 h-9 m-4 md:hidden grid grid-cols-1">
-                <p class=" py-1 text-white opacity-100 px-4">Discover</p>
+                <a href="../Discover.html"><p class=" py-1 text-white opacity-100 px-4">Discover</p></a>
                 <div class=" opacity-0 hover:opacity-100 px-2 py-1 bg-slate-200">
-                    <a href="./Buttons/DIscoverButton.html"><div class=" w-20 h-9 hover:bg-slate-400">
+                    <a href="../Buttons/DIscoverButton.html"><div class=" w-20 h-9 hover:bg-slate-400">
                      <p class=" px-2">Buttons</p>
                     </div></a>
-                    <a href="./Search_Bar/DiscoverSearchBars.html"><div class=" w-20 h-9 hover:bg-slate-400">
+                    <a href="../Search_Bar/DiscoverSearchBars.html"><div class=" w-20 h-9 hover:bg-slate-400">
                         <p class=" px-1">Searchbar</p>
                        </div></a>
                        <a href=""><div class=" w-20 h-9 hover:bg-slate-400">
