--- a/Components/Search_Bar/DiscoverSearchBars.html
+++ b/Components/Search_Bar/DiscoverSearchBars.html
@@ -40,8 +40,8 @@
                        <a href=""><div class=" w-20 h-9 hover:bg-slate-400">
                         <p class=" px-1">Docs</p>
                        </div></a>
-                       <a href=""><div class=" w-20 h-9 hover:bg-slate-400">
-                        <p class=" px-1">Donate</p>
+                       <a href="https://trello.com/b/tJwOMI84/cursorbridge-plan"><div class=" w-20 h-9 hover:bg-slate-400">
+                        <p class=" px-1">Road Map</p>
                        </div></a>
                 </div>
             </div>
