Added roadmap to the website

--- a/Components/Discover.html
+++ b/Components/Discover.html
@@ -19,7 +19,7 @@
                 <a href=""><p class=" text-black dark:text-white hidden md:block md:text-lg">Icons</p> </a>
                 <a href=""><p class=" text-black dark:text-white hidden md:block md:text-lg">Docs</p> </a>
                 <a href=""> <p class=" text-black dark:text-white hidden md:block md:text-lg">Community</p> </a>
-                <a href=""> <p class=" text-black dark:text-white hidden md:block md:text-lg">Donate</p> </a>
+                <a href="https://trello.com/b/tJwOMI84/cursorbridge-planhttps://trello.com/b/tJwOMI84/cursorbridge-plan"> <p class=" text-black dark:text-white hidden md:block md:text-lg">Road Map</p> </a>
         </div>
         <div class=" z-50">
             <div class=" rounded-lg bg-blue-700 w-24 h-9 m-4 md:hidden grid grid-cols-1">
