added navigation to icons folder

--- a/Components/Buttons/DIscoverButton.html
+++ b/Components/Buttons/DIscoverButton.html
@@ -31,7 +31,7 @@
                         <p class=" px-1">Searchbar</p>
                        </div></a>
                        <a href=""><div class=" w-20 h-9 hover:bg-slate-400">
-                        <p class=" px-1">Icons</p>
+                        <a href="../icons/Discovericons.html"><p class=" px-1">Icons</p></a>
                        </div></a>
                        <a href=""><div class=" w-20 h-9 hover:bg-slate-400">
                         <p class=" px-1">Community</p>
