--- a/Components/Discover.html
+++ b/Components/Discover.html
@@ -16,7 +16,7 @@
         <div class=" container flex justify-end md:px-10 md:gap-10">
             <a href="./Buttons/DIscoverButton.html"><p class=" text-black dark:text-white hidden md:block md:text-lg">Button</p></a>
             <a href="./Search_Bar/DiscoverSearchBars.html"><p class=" text-black dark:text-white hidden md:block md:text-lg">Search Bar</p></a>
-                <a href=""><p class=" text-black dark:text-white hidden md:block md:text-lg">Icons</p> </a>
+                <a href="./icons/Discovericons.html"><p class=" text-black dark:text-white hidden md:block md:text-lg">Icons</p> </a>
                 <a href=""><p class=" text-black dark:text-white hidden md:block md:text-lg">Docs</p> </a>
                 <a href=""> <p class=" text-black dark:text-white hidden md:block md:text-lg">Community</p> </a>
                 <a href="https://trello.com/b/tJwOMI84/cursorbridge-planhttps://trello.com/b/tJwOMI84/cursorbridge-plan"> <p class=" text-black dark:text-white hidden md:block md:text-lg">Road Map</p> </a>
@@ -32,7 +32,7 @@
                         <p class=" px-1">Searchbar</p>
                        </div></a>
                        <a href=""><div class=" w-20 h-9 hover:bg-slate-400">
-                        <p class=" px-1">Icons</p>
+                        <a href="./icons/Discovericons.html"><p class=" px-1">Icons</p> </a>
                        </div></a>
                        <a href=""><div class=" w-20 h-9 hover:bg-slate-400">
                         <p class=" px-1">Community</p>
