--- a/Components/icons/GithubLogo.html
+++ b/Components/icons/GithubLogo.html
@@ -18,8 +18,8 @@
         <div class=" flex justify-start md:justify-end px-28">
             <iframe id="SVGcontent" class="" src="https://www.thiscodeworks.com/embed/6209bd62c055f30015380b42" style="width: 50%; height: 281px;" frameborder="0"></iframe>
             <div id="IMGcontent" class=" text-white">
-                <a href="./Images/BandWface.png" download="BandW Face"> No Images here.</a>
-                <p>Note: that if you are using SVG then you do not need to download the image.  </p>
+                <a href="./Images/TinyGithub.svg" download="BandW Face"> Download the SVG File.</a>
+                <p>Note: that if you want, you can also copy the SVG code instead of downloading it.</p>
             </div>
 
         </div>
