--- a/Components/icons/Discovericons.html
+++ b/Components/icons/Discovericons.html
@@ -50,7 +50,7 @@
     
     <div id="Container" class=" flex flex-col md:grid-cols-3 md:grid justify-center">
 
-       <a href="./Plain_Search.html"> <div class=" md:px-32 py-24 flex justify-center">
+       <a href="./GithubLogo.html"> <div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
                 <div class=""><img src="./Images/Searchbar.png" class=" py-5 w-auto px-6"></div>
                 <div class=""><p class=" text-center text-lg text-gray-700 py-7">Plain White</p></div>
