firstever logo has been implemented

--- a/Components/icons/Discovericons.html
+++ b/Components/icons/Discovericons.html
@@ -52,8 +52,8 @@
 
        <a href="./GithubLogo.html"> <div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
-                <div class=""><img src="./Images/Searchbar.png" class=" py-5 w-auto px-6"></div>
-                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Plain White</p></div>
+                <div class=" flex justify-center"><img src="./Images/TinyGithub.svg" class=" py-5 w-auto px-6"></div>
+                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Github Dark</p></div>
             </div>
         </div></a>
         <a href="./PinkSearch.html"><div class=" md:px-32 py-24 flex justify-center">
