--- a/Components/icons/GithubLogo.html
+++ b/Components/icons/GithubLogo.html
@@ -16,9 +16,9 @@
         </div>
         <div id="Image" class=" flex justify-center md:justify-start mx-14"><img class=" md:translate-y-20 scale-150" src="Images/TinyGithub.svg"></div>
         <div class=" flex justify-start md:justify-end px-28">
-            <iframe id="SVGcontent" class="" src="https://www.thiscodeworks.com/embed/6209bd62c055f30015380b42" style="width: 50%; height: 281px;" frameborder="0"></iframe>
+            <iframe id="SVGcontent" class="" src="https://www.thiscodeworks.com/embed/624e2111aa32fe001510a1e6" style="width: 50%; height: 281px;" frameborder="0"></iframe>
             <div id="IMGcontent" class=" text-white">
-                <a href="./Images/TinyGithub.svg" download="BandW Face"> Download the SVG File.</a>
+                <a href="./Images/TinyGithub.svg" download="BandW Face"> Click here to download the SVG File.</a>
                 <p>Note: that if you want, you can also copy the SVG code instead of downloading it.</p>
             </div>
 
