--- a/Components/icons/Discovericons.html
+++ b/Components/icons/Discovericons.html
@@ -58,32 +58,32 @@
         </div></a>
         <a href="./PinkSearch.html"><div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
-                <div class=""><img src="./Images/PlainRed.png" class=" py-5 w-auto px-6"></div>
-                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Plain Red</p></div>
+                <div class="flex justify-center"><img src="./Images/Fiverr.svg" class=" py-5 w-auto px-6"></div>
+                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Fiverr</p></div>
             </div>
         </div></a>
         <a href="./BandW.html"><div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
-                <div class=""><img src="./Images/BandW.png" class=" py-5 w-auto px-6"></div>
-                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Black And White</p></div>
+                <div class="flex justify-center"><img src="./Images/Discord.svg" class=" py-5 w-auto px-6"></div>
+                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Discord</p></div>
             </div>
         </div></a>
         <a href="./Sea_Bed.html"><div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
-                <div class=""><img src="./Images/SeaBed.png" class=" py-5 w-auto px-6"></div>
-                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Sea Weed</p></div>
+                <div class="flex justify-center"><img src="./Images/mail.svg" class=" py-5 w-auto px-6"></div>
+                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Mail</p></div>
             </div>
         </div></a>
         <a href="./Pink_Frenzy.html"><div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
-                <div class=""><img src="./Images/PinkFrenzy.png" class=" py-5 w-auto px-6"></div>
-                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Pink Frenzy</p></div>
+                <div class="flex justify-center"><img src="./Images/TinySlack.svg" class=" py-5 w-auto px-6"></div>
+                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Slack Dark</p></div>
             </div>
         </div></a>
         <a href="./LavaSearch.html"><div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
-                <div class=""><img src="./Images/Lavaman.png" class=" py-5 w-auto px-6"></div>
-                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Lava Search</p></div>
+                <div class="flex justify-center"><img src="./Images/Tailwind.svg" class=" py-5 w-auto px-6"></div>
+                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Tailwind</p></div>
             </div>
         </div></a>
     </div>
