Fiverr Logo and bug fixes

--- a/Components/icons/Discovericons.html
+++ b/Components/icons/Discovericons.html
@@ -56,7 +56,7 @@
                 <div class=""><p class=" text-center text-lg text-gray-700 py-7">Github Dark</p></div>
             </div>
         </div></a>
-        <a href="./PinkSearch.html"><div class=" md:px-32 py-24 flex justify-center">
+        <a href="./Fiverr.html"><div class=" md:px-32 py-24 flex justify-center">
             <div class=" w-64 h-64 bg-gray-300 rounded-xl">
                 <div class="flex justify-center"><img src="./Images/Fiverr.svg" class=" py-5 w-auto px-6"></div>
                 <div class=""><p class=" text-center text-lg text-gray-700 py-7">Fiverr</p></div>
