--- a/Components/icons/Fiverr.html
+++ b/Components/icons/Fiverr.html
@@ -14,11 +14,11 @@
             <button id="SVG" class=" w-24 h-14 rounded-lg bg-white">SVG</button>
             <button id="IMG" class=" w-24 h-14 rounded-lg bg-white">IMG</button>
         </div>
-        <div id="Image" class=" flex justify-center md:justify-start mx-14"><img class=" md:translate-y-20 scale-150" src="Images/TinyGithub.svg"></div>
+        <div id="Image" class=" flex justify-center md:justify-start mx-14"><img class=" md:translate-y-20 scale-150" src="Images/Fiverr.svg"></div>
         <div class=" flex justify-start md:justify-end px-28">
-            <iframe id="SVGcontent" class="" src="https://www.thiscodeworks.com/embed/624e2111aa32fe001510a1e6" style="width: 50%; height: 281px;" frameborder="0"></iframe>
+            <iframe id="SVGcontent" class="" src="https://www.thiscodeworks.com/embed/627c6c6f53dd70001530d05a" style="width: 50%; height: 281px;" frameborder="0"></iframe>
             <div id="IMGcontent" class=" text-white">
-                <a href="./Images/TinyGithub.svg" download="Fiverr"> Click here to download the SVG File.</a>
+                <a href="./Images/Fiverr.svg" download="Fiverr"> Click here to download the SVG File.</a>
                 <p>Note: that if you want, you can also copy the SVG code instead of downloading it.</p>
             </div>
 
