--- a/Components/Discover.html
+++ b/Components/Discover.html
@@ -110,6 +110,42 @@
                 <div class=""><p class=" text-center text-lg text-gray-700 py-7">Black and White</p></div>
             </div>
         </div></a>
+        <a href="./icons/GithubLogo.html"> <div class=" md:px-32 py-24 flex justify-center">
+            <div class=" w-64 h-64 bg-gray-300 rounded-xl">
+                <div class=" flex justify-center"><img src="./icons/Images/TinyGithub.svg" class=" py-5 w-auto px-6"></div>
+                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Github Dark</p></div>
+            </div>
+        </div></a>
+        <a href="./icons/Fiverr.html"><div class=" md:px-32 py-24 flex justify-center">
+            <div class=" w-64 h-64 bg-gray-300 rounded-xl">
+                <div class="flex justify-center"><img src="./icons/Images/Fiverr.svg" class=" py-5 w-auto px-6"></div>
+                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Fiverr</p></div>
+            </div>
+        </div></a>
+        <a href="./icons/Discord.html"><div class=" md:px-32 py-24 flex justify-center">
+            <div class=" w-64 h-64 bg-gray-300 rounded-xl">
+                <div class="flex justify-center"><img src="./icons/Images/Discord.svg" class=" py-5 w-auto px-6"></div>
+                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Discord</p></div>
+            </div>
+        </div></a>
+        <a href="./icons/Mail.html"><div class=" md:px-32 py-24 flex justify-center">
+            <div class=" w-64 h-64 bg-gray-300 rounded-xl">
+                <div class="flex justify-center"><img src="./icons/Images/mail.svg" class=" py-5 w-auto px-6"></div>
+                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Mail</p></div>
+            </div>
+        </div></a>
+        <a href="./icons/Vite.html"><div class=" md:px-32 py-24 flex justify-center">
+            <div class=" w-64 h-64 bg-gray-300 rounded-xl">
+                <div class="flex justify-center"><img src="./icons/Images/Vite.svg" class=" py-5 w-auto px-6"></div>
+                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Vite</p></div>
+            </div>
+        </div></a>
+        <a href="./icons/Tailwind.html"><div class=" md:px-32 py-24 flex justify-center">
+            <div class=" w-64 h-64 bg-gray-300 rounded-xl">
+                <div class="flex justify-center"><img src="./icons/Images/Tailwind.svg" class=" py-5 w-auto px-6"></div>
+                <div class=""><p class=" text-center text-lg text-gray-700 py-7">Tailwind</p></div>
+            </div>
+        </div></a>
     </div>
 
 </body>
